--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     </ol>
     <hr>
     <h1> Contact Me</h1>
-    <p>irorunoluwaa@gmail.com</p>
-    <p> 07068481689</p>
+    <p>Email: <a href="gmail.com">irorunoluwaa@gmail.com</a></p>
+    <p>Phone: 07068481689</p>
   </body>
 
 </html>
